<resources>
    <string name="app_name">Checkout</string>
    <string name="preference_file_key">com.abe.checkout.preference_file_key</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="scanItems">Scan Items</string>
    <string name="myCart">My Cart</string>
    <string name="editPayment">Edit Payment</string>
    <string name="history">Purchases</string>
    <string name="hello">Thank you for shopping with us!</string>

    <string name="defaultItem">Please Scan an Item</string>
    <string name="quantity">Quantity:</string>
    <string name="addItem">Add Item to Cart</string>
    <string name="noItemsInCart">There are no items in your cart. Start shopping!</string>
    <string name="noPurchasesInHistory">You have not made any purchases yet. Start shopping!</string>
    <string name="noCard">Please enter your payment information first.</string>
    <string name="activeCard">Active Card:</string>
    <string name="noActiveCard">None</string>
    <string name="cardNumber">Card Number</string>
    <string name="nameOnCard">Name on Card</string>
    <string name="expiration">Expiration Date (mm/YY)</string>
    <string name="cvv">CVV (3 digit code on the back)</string>

    <string name="updatedCard">Updated card</string>

    <string name="checkout">CHECKOUT</string>
    <string name="update">UPDATE</string>
    <string name="addToCart">ADD TO CART</string>

    <string name="action_settings">Logout</string>

    <string name="pictureButtonDescription">Picture button to scan barcode</string>
    <string name="itemNameDescription">Scanned item name</string>
    <string name="addItemButtonDescription">Button adds item to cart</string>
    <string name="itemPriceDescription">Scanned item price</string>
    <string name="itemQuantityDescription">Quantity of scanned item</string>
    <string name="minusButtonDescription">Decrement quantity</string>
    <string name="plusButtonDescription">Increment quantity</string>
    <string name="cartListDescription">List of items in cart</string>
    <string name="purchaseButtonDescription">Purchase button for items in cart</string>
    <string name="cardActiveNumberDescription">Using this card for purchase</string>
    <string name="cardNumberDescription">Entry for card number to be used</string>
    <string name="cardNameDescription">Entry for name on card</string>
    <string name="cardExpirationDescription">Entry for card expiration date</string>
    <string name="cardCVVDescription">Entry for card CVV code</string>
    <string name="updateCardButtonDescription">Update card button</string>
    <string name="historyDescription">Past purchase history</string>

    <string name="saved_card_number">com.abe.checkout.cardnumber</string>
    <string name="saved_card_expiration">com.abe.checkout.cardexpiration</string>
    <string name="saved_card_name">com.abe.checkout.cardname</string>
    <string name="saved_card_cvv">com.abe.checkout.cardcvv</string>
    
</resources>
