<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.checkout.Fragments.CartFragment"
    tools:showIn="@layout/fragment_cart"
    android:orientation="vertical">

    <TextView
        android:fontFamily="sans-serif-light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="50dp"
        android:textColor="#000000"
        android:text="@string/myCart"
        android:layout_margin="8dp"/>

    <ListView
        android:id="@+id/cartLV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:contentDescription="@string/cartListDescription">
    </ListView>

    <TextView
        android:id="@+id/emptyCartTV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/noItemsInCart"
        android:gravity="center"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/checkoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkout"
        android:gravity="center"
        android:background="#11d911"
        android:textColor="#000000"
        android:textSize="24sp"
        android:fontFamily="sans-serif-light"
        android:contentDescription="@string/purchaseButtonDescription"
        android:visibility="invisible"/>

</LinearLayout>