<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:focusable="true">

        <FrameLayout
            android:id="@+id/camera_preview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/captureButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/fab_margin"
            android:contentDescription="@string/pictureButtonDescription"
            app:srcCompat="@android:drawable/ic_menu_camera"
            android:minHeight="48dp"
            android:minWidth="48dp"/>

    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#000000"/>

    <LinearLayout
        android:id="@+id/itemDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="8dp"
            android:focusable="true">

            <TextView
                android:id="@+id/itemTitleTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:textSize="20sp"
                android:textColor="#000000"
                android:contentDescription="@string/itemNameDescription"
                android:text="@string/defaultItem" />

            <TextView
                android:id="@+id/itemPriceTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="#000000"
                android:fontFamily="sans-serif-light"
                android:layout_below="@+id/itemTitleTV"
                android:contentDescription="@string/itemPriceDescription"
                android:text="$0.00" />

            <ImageView
                android:id="@+id/itemIV"
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:layout_below="@+id/itemTitleTV"
                android:layout_alignRight="@+id/itemTitleTV"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="30dp"/>

        </RelativeLayout>

        <View
            android:id="@+id/verticalDivider"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#000000"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:focusable="true">

            <TextView
                android:id="@+id/quantityTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                android:fontFamily="sans-serif-light"
                android:textColor="#000000"
                android:textSize = "20sp"
                android:layout_marginLeft="8dp"/>

            <TextView
                android:id="@+id/quantityEditTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:textColor="#000000"
                android:text="0"
                android:fontFamily="sans-serif-light"
                android:layout_below="@+id/quantityTV"
                android:contentDescription="@string/itemQuantityDescription"
                android:layout_centerHorizontal="true" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/minusButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginBottom="@dimen/fab_margin"
                android:layout_toLeftOf="@+id/quantityEditTV"
                android:src="@mipmap/minus"
                android:layout_below="@+id/quantityEditTV"
                android:layout_marginLeft="@dimen/fab_margin"
                android:contentDescription="@string/minusButtonDescription" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/plusButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_toRightOf="@+id/quantityEditTV"
                android:layout_below="@id/quantityEditTV"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/fab_margin"
                android:layout_marginRight="@dimen/fab_margin"
                android:src="@mipmap/plus"
                android:contentDescription="@string/plusButtonDescription"/>

        </RelativeLayout>

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#000000"/>

    <Button
        android:id="@+id/addToCartButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addToCart"
        android:gravity="center"
        android:background="#11d911"
        android:textColor="#000000"
        android:textSize="24sp"
        android:fontFamily="sans-serif-light"
        android:visibility="invisible"
        android:contentDescription="@string/addItemButtonDescription"/>

</LinearLayout>
